# autoware.trucks

./: ONBOARDING.md  README.md
AutoSpeed/: README.md
AutoSpeed/create_data/OpenLane/: README.md  converter.py  test_conversion.py
Control/Longitudinal/PI_Controller/: CMakeLists.txt  README.md
Control/Longitudinal/PI_Controller/include/: pi_controller.hpp
Control/Longitudinal/PI_Controller/src/: main.cpp  pi_controller.cpp
Control/Steering/SteeringController/: CMakeLists.txt  README.md
Control/Steering/SteeringController/include/: steering_controller.hpp
Control/Steering/SteeringController/src/: main.cpp  steering_controller.cpp
EgoPath/create_path/CurveLanes/: process_curvelanes.py
EgoPath/create_path/OpenLane/: README.md  parse_openlane_bev.py  process_openlane.py
EgoPath/create_path/TuSimple/: process_tusimple.py
Interfaces/control_msgs/: CHANGELOG.rst
Interfaces/control_msgs/msg/: Longitudinal.msg
Interfaces/vehicle_msgs/: CHANGELOG.rst  CMakeLists.txt
Interfaces/vehicle_msgs/msg/: BrakeControlCommand.msg  BrakeReport.msg  EngineControlCommand.msg  EngineReport.msg  GearReport.msg  SteeringReport.msg  VelocityReport.msg
Models/: requirements.txt
Models/config/: auto_speed.yaml
Models/data_utils/: augmentations.py  load_data_auto_speed.py  load_data_auto_steer.py
Models/exports/: convert_pytorch_to_onnx.py
Models/inference/: auto_speed_infer.py  auto_steer_infer.py
Models/model_components/: auto_speed_backbone.py  auto_speed_head.py  auto_speed_neck.py  auto_speed_network.py  auto_steer_context.py  auto_steer_head.py  auto_steer_network.py  backbone_feature_fusion.py  ego_lanes_head.py  ego_path_neck.py
Models/training/: auto_speed_trainer.py  auto_speed_util.py  auto_steer_trainer.py  train_auto_steer.py
Models/visualizations/AutoSpeed/: image_visualization.py  video_visualization.py
Models/visualizations/AutoSteer/: image_visualization.py  mass_test_vid_inference.py  video_visualization.py
SDV/OpenADKit/: README.md  launch-scene3d.sh
SDV/OpenADKit/docker/: Dockerfile  entrypoint.sh
SDV/OpenADKit/model-weights/: place-model-weights-here
Simulation/: README.md
Simulation/CARLA/ROS2/: README.md  ros_carla_config.py
Simulation/CARLA/ROS2/config/: VisionPilot_carla9.json
Simulation/CARLA/ROS2/src/carla_control_publisher/carla_control_publisher/: pub_carla_control_node.py
Simulation/CARLA/ROS2/src/odom_publisher/odom_publisher/: pub_odom_node.py
Simulation/CARLA/ROS2/src/road_shape_publisher/road_shape_publisher/: road_shape_publisher_node.py
VisionPilot/: README.md
VisionPilot/ROS2/: README.md
VisionPilot/ROS2/PATHFINDER/include/PATHFINDER/: pathfinder_node.hpp
VisionPilot/ROS2/PATHFINDER/src/: estimator.cpp  pathfinder_node.cpp
VisionPilot/ROS2/longitudinal_controller/: CMakeLists.txt
VisionPilot/ROS2/longitudinal_controller/include/: longitudinal_controller_node.hpp
VisionPilot/ROS2/longitudinal_controller/src/: longitudinal_controller_node.cpp
VisionPilot/ROS2/models/: CMakeLists.txt
VisionPilot/ROS2/models/src/: run_autospeed_node.cpp  run_model_node.cpp
VisionPilot/ROS2/steering_controller/src/: steering_controller_node.cpp
VisionPilot/Standalone/AutoSpeed/: CMakeLists.txt  README.md  infer_stream.cpp  test_video.sh
VisionPilot/Zenoh/: README.md  justfile
VisionPilot/Zenoh/models/: CMakeLists.txt  run_model.cpp
VisionPilot/Zenoh/video_pubsub/: CMakeLists.txt  segment_subscriber.cpp  video_publisher.cpp  video_subscriber.cpp
VisionPilot/common/include/: gstreamer_engine.hpp  logging.hpp
VisionPilot/common/sensors/: gstreamer_engine.cpp
VisionPilot/common/visualizers/: masks_visualization_engine.cpp
