cmake_minimum_required(VERSION 3.10)
project(SteeringController)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(
    ${PROJECT_SOURCE_DIR}/include
)

add_executable(SteeringController
    src/main.cpp
    src/steering_controller.cpp
)

add_library(steering_controller_lib
    src/steering_controller.cpp
)
target_include_directories(steering_controller_lib PUBLIC include)